Fixed issue where margin was not appearing on child pages, making main-nav overlap over page-headings on >=1200px wide screens (added important to media query).

--- a/styles/style.css
+++ b/styles/style.css
@@ -568,7 +568,7 @@ h3 {
     display: none;
   }
   .container.page-heading {
-    margin-top: 100px;
+    margin-top: 100px !important;
   }
 }
 
