--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -431,6 +431,6 @@ h3 {
     }
     
     .container.page-heading {
-        margin-top: 100px;
+        margin-top: 100px !important;
     }
 }
